# ChangeLog for media-libs/libpng
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.273 2010/10/05 10:48:11 ssuominen Exp $

*libpng-1.4.4 (05 Oct 2010)

  05 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.4.4.ebuild:
  Version bump.

  19 Jul 2010; Joseph Jezak <josejx@gentoo.org> libpng-1.2.44.ebuild,
  libpng-1.4.3.ebuild:
  Marked ppc stable for bug #324153.

  11 Jul 2010; Raúl Porcel <armin76@gentoo.org> libpng-1.4.3.ebuild:
  arm/ia64/m68k/s390/sh/sparc stable wrt #324153

  11 Jul 2010; Tobias Klausmann <klausman@gentoo.org> libpng-1.4.3.ebuild:
  Stable on alpha, bug #324153

  04 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> libpng-1.2.44.ebuild,
  libpng-1.4.3.ebuild:
  ppc64 stable wrt #324153

  30 Jun 2010; Jeremy Olexa <darkside@gentoo.org> libpng-1.4.3.ebuild,
  files/libpng-1.4.x-update.sh:
  Migrate Gentoo Prefix changes as tested in the Gentoo Prefix overlay. Add
  keywords, eprefixify update script. Approved by ssuominen.

  30 Jun 2010; Christian Faulhammer <fauli@gentoo.org> libpng-1.4.3.ebuild:
  stable x86, security bug 324153

  30 Jun 2010; Christian Faulhammer <fauli@gentoo.org> libpng-1.2.44.ebuild:
  stable x86, security bug 324153

  28 Jun 2010; Jeroen Roovers <jer@gentoo.org> libpng-1.2.44.ebuild:
  Stable for HPPA (bug #324153).

  28 Jun 2010; Jeroen Roovers <jer@gentoo.org> libpng-1.4.3.ebuild:
  Stable for HPPA (bug #324153).

  27 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> libpng-1.2.44.ebuild,
  libpng-1.4.3.ebuild:
  amd64 stable wrt security #324153

*libpng-1.4.3 (27 Jun 2010)
*libpng-1.2.44 (27 Jun 2010)

  27 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.2.44.ebuild,
  +libpng-1.4.3.ebuild:
  Version bump.

  15 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> libpng-1.4.2.ebuild:
  Preserve libpng12.so.0 as part of #323649.

  16 May 2010; Samuli Suominen <ssuominen@gentoo.org>