@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libpng
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.273 2010/10/05 10:48:11 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libpng/ChangeLog,v 1.274 2010/12/22 15:36:51 ssuominen Exp $
+
+*libpng-1.4.5 (22 Dec 2010)
+
+  22 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> +libpng-1.4.5.ebuild:
+  Version bump.
 
 *libpng-1.4.4 (05 Oct 2010)
 
